welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:6: error: not found: value nbMarche
for(i <- 0 to nbMarche){
              ^