welcome.lessons.welcome.loopfor.LoopStairs.scala.code

while(!estFaceMur()){
avance();
}
for(i <- 0 to nbMarche){


	
}
